src/objects/Accounting_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>User_Credits__c</fullName>
        <label>User Credits</label>
        <summarizedField>Accounting_LineItems__c.applied_credit__c</summarizedField>
        <summaryFilterItems>
            <field>Accounting_LineItems__c.Feature_Type1__c</field>
            <operation>equals</operation>
            <value>User</value>
        </summaryFilterItems>
        <summaryForeignKey>Accounting_LineItems__c.invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>View_Credit_Adjustments__c</fullName>
        <formula>IF(TEXT(Server_Name__c) = &quot;CommCareHQ&quot;, 
HYPERLINK(&quot;https://www.commcarehq.org/hq/accounting/credit_adjustments/&quot;, &quot;View Credit Adjustments in HQ&quot;, &quot;_self&quot;),
HYPERLINK(&quot;https://india.commcarehq.org/hq/accounting/credit_adjustments/&quot;, &quot;View Credit Adjustments in HQ&quot;, &quot;_self&quot;))</formula>
        <label>View Credit Adjustments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Statements_in_HQ__c</fullName>
        <formula>IF(TEXT(Server_Name__c) = &quot;CommCareHQ&quot;, 
HYPERLINK(&quot;https://www.commcarehq.org/hq/accounting/invoices/?account_name=&amp;subscriber=&quot; &amp; accounting_subscriber_domain__c, &quot;View Statements in HQ&quot;, &quot;_self&quot;),
HYPERLINK(&quot;https://india.commcarehq.org/hq/accounting/invoices/?account_name=&amp;subscriber=&quot; &amp; accounting_subscriber_domain__c, &quot;View Statements in HQ&quot;, &quot;_self&quot;))</formula>
        <label>View Statements in HQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Subscription_in_HQ__c</fullName>
        <description>Links to HQ Subscription settings</description>
        <formula>IF(TEXT(Server_Name__c) = &quot;CommCareHQ&quot;,
HYPERLINK(&quot;https://www.commcarehq.org/a/&quot;&amp; accounting_subscriber_domain__c &amp;&quot;/settings/project/subscription/&quot;, &quot;View Subscription in HQ&quot;, &quot;_self&quot;),
HYPERLINK(&quot;https://india.commcarehq.org/a/&quot;&amp; accounting_subscriber_domain__c &amp;&quot;/settings/project/subscription/&quot;, &quot;View Subscription in HQ&quot;, &quot;_self&quot;))</formula>
        <label>View Subscription in HQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by Product Ops to indicate real invoices that were triggered by HQ, that we do not expect will ever be paid. This is used to indicate invoices that we are writing off, most often for project spaces that were downgraded to Community through the automated process for downgraded unpaid subscriptions</description>
        <inlineHelpText>Check this box to indicate an invoice Dimagi is writing off. The invoice is real, but we do not expect to receive payment.</inlineHelpText>
        <label>Write Off</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Accounting_View_RR</fullName>
        <columns>Invoice__c</columns>
        <columns>NAME</columns>
        <columns>Accounting_Subscription__c</columns>
        <columns>accounting_billingaccount_name__c</columns>
        <columns>accounting_subscriber_domain__c</columns>
        <columns>date_due__c</columns>
        <columns>accounting_subscription_date_end__c</columns>
        <columns>id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounting View - RR</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Invoice__c</columns>
        <columns>NAME</columns>
        <columns>Accounting_Subscription__c</columns>
        <columns>accounting_billingaccount_name__c</columns>
        <columns>accounting_subscriber_domain__c</columns>
        <columns>date_due__c</columns>
        <columns>accounting_subscription_date_end__c</columns>
        <columns>id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>